# S-IDE

./: .gitattributes  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.dev  LICENSE  README.md  biome.json  latest.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/issue-bodies/: issue-01-tech-stack.md  issue-02-mobile.md  issue-03-cli.md  issue-04-health.md  issue-05-orchestrator-observer.md  issue-06-screen-buffer.md  issue-07-cost-monitoring.md  issue-08-middleware-shutdown.md  issue-09-duplicate-js.md
.github/scripts/: create-issues.mjs  create-issues.ps1
.github/workflows/: generate-keys.yml  mobile-release.yml  release.yml  test.yml
apps/desktop/: package.json
apps/desktop/__tests__/: desktopVersionSync.test.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  manifest.xml  side-desktop.exe.manifest  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  commands_tests.rs  common.rs  main.rs  remote_access.rs  remote_access_tests.rs  scanner.rs  server.rs  server_tests.rs  tailscale.rs  tailscale_tests.rs  tunnel.rs  tunnel_tests.rs  updater.rs  window.rs
apps/mobile/: App.js  App.tsx  README.md  app.json  eas.json  package.json  pnpm-lock.yaml  release_notes.md
apps/mobile/assets/: README.md
apps/server/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/server-rust/: Cargo.toml
apps/server-rust/migrations/: 001_initial.sql
apps/server-rust/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
apps/server-rust/src/db/: migrations.rs  mod.rs  pool.rs
apps/server-rust/src/models/: deck.rs  mod.rs  terminal.rs  workspace.rs
apps/server-rust/src/repositories/: deck_repo.rs  mod.rs  terminal_repo.rs  workspace_repo.rs
apps/server-rust/src/routes/: agents.rs  decks.rs  files.rs  git.rs  health.rs  local_servers.rs  mcp_servers.rs  mod.rs  terminals.rs  workspaces.rs
apps/server-rust/src/terminal/: manager.rs  mod.rs
apps/server-rust/src/utils/: mod.rs  path_security.rs
apps/server-rust/src/websocket/: mod.rs
apps/server-rust/tests/: health_test.rs
apps/server/data/: deck-ide.db-wal
apps/server/src/: cli.ts  config.js  config.ts  index.js  index.ts  server.js  server.ts  types.ts  websocket.js  websocket.ts
apps/web/: .env.production  index.html  package.json  tsconfig.json  vite.config.js  vitest.config.ts
apps/web/public/: README.md  (+2 more)
docs/: REFACTORING_SUMMARY.md  mobile-release-status.md  shared-package.md
docs/ja/: README.md
docs/plans/: 2025-02-03-multiplatform-ide.md  2025-02-04-vscode-tab-panel-design.md  2025-02-04-vscode-tab-panel-implementation.md  2025-02-05-unified-tab-panel-design.md  2025-02-05-unified-tab-panel-implementation.md  2025-02-25-rust-core-daemon-phase1.md  2026-02-03-auto-update-design.md  2026-02-07-remote-access-tailscale-design.md  2026-02-11-cli-framework.md  2026-02-11-dockview-migration.md  2026-02-25-rust-migration-plan.md  2026-02-28-agent-usage-availability-status.md
docs/specs/: agents.md  conventions.md  desktop.md  frontend.md  server.md  system.md  terminal-io.md
scripts/: bundle-server.js  create-server-bundle-zip.js  create-server-bundle.js  generate-icons.js  install-without-symlink.ps1  setup-android-secrets.sh
tests/: setup.ts
(+272 files in other folders)
