[package]
name = "side-desktop"
version = "3.0.0"
description = "S-IDE Desktop"
authors = ["rebuildup"]
license = "MIT"
repository = "https://github.com/S-IDE-studio/S-IDE"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
which = "7"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "side-desktop"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
